| Summary: | ASTERISK-27179: res_pjsip_session: Handling of 'msid' is incorrect | ||
| Reporter: | Kevin Harwell (kharwell) | Labels: | pjsip |
| Date Opened: | 2017-08-04 16:59:37 | Date Closed: | 2017-08-16 06:43:37 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_sdp_rtp Resources/res_pjsip_session |
| Versions: | GIT 15.0.0-beta1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The current handling of the msid attribute is not quite right. According to the spec[1] the msid's between the offer/answer are not dependent upon one another. Meaning the same msid's given in an offer do not have to returned in the answer for a given stream. Actually it's probably better if they are not copied/reused since this can potentially cause some browser side confusion.
Instead Asterisk should always just generate new msids. When doing this we should also pair audio+video streams together when we can, i.e. sharing the same stream but different tracks. [1] https://www.ietf.org/id/draft-ietf-mmusic-msid-16.txt | ||
| Comments: | |||